--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,8 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Web site created using create-react-app" />
-    <title>Family</title>
+    <meta name="description" content="Family tree from San Diego to Moscow" />
+    <title>Family Tree</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
